fix alignment

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,5 @@ fieldset {
     height: 20px;
     font-size: 18px;
     text-align: center;
-    margin-left: 2.2px;
-    margin-right: auto;
+    margin-left: 10px;
 }
